# Bianca_Andrade_embarcatech_HBr_2025

./: .gitignore  LICENSE  README.md
CONTADOR/contador_ex1/: contador_ex1.c
CONTADOR/leitura_joystick/: leitura_joystick.c
CONTADOR/monitor_temperatura/: ReadMe.md
projetos/blink_modular/: CMakeLists.txt
projetos/contador_ex1/: CMakeLists.txt  Readme.md
projetos/leitura_joystick/: CMakeLists.txt  ReadMe.md
projetos/monitor_temperatura/: CMakeLists.txt  ReadMe.md  monitor_temperatura.c
projetos/teste_unitario/: temp_sensor.h
